--- a/sass/components/_headerbottom.scss
+++ b/sass/components/_headerbottom.scss
@@ -1,4 +1,5 @@
 .header-sections {
+  padding: 0 5px;
   margin: 15px 0;
   height: 30px;
   width: 100%;
