--- a/sass/components/_headertop.scss
+++ b/sass/components/_headertop.scss
@@ -1,7 +1,7 @@
 .header {
   margin-top: 15px;
   width: 100%;
-  height: 200px;
+  height: 210px;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: 1fr;
@@ -9,9 +9,10 @@
 }
 .header-top {
   width: 100%;
-  height: 100%;
+  height: 80px;
   display: grid;
   align-items: center;
+  grid-template-rows: 1fr;
   grid-template-columns: 20% 40% 20%;
   grid-column-gap: 10%;
   &-publicity1 {
@@ -28,8 +29,7 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  // align-items: center;
-  justify-content: flex-end;
+  align-items: center;
   &-img {
     width: 80%;
     object-fit: contain;
@@ -38,7 +38,7 @@
 
 .publicity1-texts {
   width: 100%;
-  height: 90%;
+  height: 50%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -89,13 +89,13 @@
   }
 }
 .header-top-titles {
-  height: 90%;
+  height: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border-top: 1px solid $bordercolor;
-  border-bottom: 1px solid $bordercolor;
+  border-top: 2px solid $bordercolor;
+  border-bottom: 2px solid $bordercolor;
   h1 {
     letter-spacing: 3px;
     text-transform: uppercase;
