--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 740px;
   display: grid;
-  grid-template-columns: 25% 50% 25%;
+  grid-template-columns: 24% 49% 25%;
   justify-content: center;
   grid-column-gap: 10px;
 }
