--- a/sass/components/_popularNews.scss
+++ b/sass/components/_popularNews.scss
@@ -1,5 +1,5 @@
 .mostPopular {
-  padding: 0 15px;
+  padding: 0 0 0 15px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -22,11 +22,14 @@
       }
       &-button {
         width: 120px;
+        margin-left: 5px;
         margin-top: 20px;
         height: 40px;
+        border: 2px solid $colorFont2;
         background-color: transparent;
         letter-spacing: -1;
         font-size: 16px;
+        font-weight: 600;
       }
     }
     &-imgBox {
